--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div>
                 <h2>Clarissa Wijaya </h2>
                 <div>
-                    <img src="images/clarissa_photo.JPG" alt="Clarissa_Photo" width="250">
+                    <img src="image/clarissa_photo.JPG" alt="Clarissa_Photo" width="250">
                 </div>
             <nav>
             <a href="#skills">Skills</a>
