--- a/pages/hire_me.html
+++ b/pages/hire_me.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name=""description" content= "Portfolio website of Clarissa Wijaya showcasing our projects and learning journey.">
+    <link rel="stylesheet" href="../css/style.css">
     <tittle>Clarissa Wijaya Portofolio Website</title>
 </head>
 
