--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h3>
             I'm a <span>Web Developer</span>
         </h3>
-        <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+        <p>I turn ideas into functional, beautiful websites.</p>
 
         <!-- icon -->
         <div class="social-icons">
@@ -87,8 +87,9 @@
     <!-- About content -->
     <div class="section-about-content">
         <h2>About <span>Me</span></h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque excepturi perspiciatis doloremque velit dolorem ad,
-         doloremque velit dolorem ad, vero libero fugiat distinctio, quam ullam Cupiditate inventore?</p>
+        <p>Hi! I’m Clarissa Wijaya — a web developer who loves turning ideas into websites. 
+            I enjoy learning new things, exploring creative solutions, and making digital stuff that
+             people actually love to use.</p>
         <a href="dokumen/cv_clarissa.pdf" download="cv_clarissa.pdf" class="btn">Donwload My CV</a>
     </div>
 
@@ -104,9 +105,9 @@
             <div class="section-service-info">
                 <i class="bx bxl-figma"></i>
                 <h4>UI / UX Design</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda facilis, 
-                    ipsa natus possimus facere architecto sit. Fugit, ducimus, voluptas dolore 
-                    itaque ipsam asperiores maxime quis, quod porro voluptas laboriosam magnam.</p>
+                <p>I design intuitive and visually appealing interfaces that focus on user needs. 
+                    My process blends creativity with usability, ensuring every screen feels clear, consistent, and easy to navigate. 
+                    The goal is simple: create experiences that users enjoy and remember.</p>
             </div>
         </div>
         <!-- Frontend Development-->
@@ -114,9 +115,9 @@
             <div class="section-service-info">
                 <i class="bx bx-code"></i>
                 <h4>Frontend Development</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda facilis, 
-                    ipsa natus possimus facere architecto sit. Fugit, ducimus, voluptas dolore 
-                    itaque ipsam asperiores maxime quis, quod porro voluptas laboriosam magnam.</p>
+                <p>I build responsive, modern, and visually appealing interfaces that deliver smooth and 
+                    enjoyable user experiences. From clean layouts to interactive elements, I focus on performance, accessibility, and 
+                    design consistency to ensure your website looks great on any device..</p>
             </div>
         </div>
         <!-- Backend Development-->
@@ -124,9 +125,9 @@
             <div class="section-service-info">
                 <i class="bx bx-code-curly"></i>
                 <h4>Backend Development</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda facilis, 
-                    ipsa natus possimus facere architecto sit. Fugit, ducimus, voluptas dolore 
-                    itaque ipsam asperiores maxime quis, quod porro voluptas laboriosam magnam.</p>
+                <p>I develop secure, reliable, and scalable server-side systems that power your website or application. 
+                    With clean logic, efficient databases, and strong API structures, 
+                    I ensure everything runs smoothly behind the scenes—so your product works fast, safely, and effortlessly.</p>
             </div>
         </div>
     </div>
@@ -141,14 +142,14 @@
         <div class="section-project-card">
             <img src="image/project1.png" alt="Project 1">
             <h3>Project Title 1</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>A web-based application focusing on delivering a smooth user experience with clean design and responsive layout.</p>
             <div class="btn">review project</div>
         </div>
         <!-- project 2 -->
         <div class="section-project-card">
             <img src="image/project2.png" alt="Project 2">
             <h3>Project Title 2</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>A modern interface project showcasing intuitive navigation, functional features, and polished visual elements.</p>
             <div class="btn">review project</div>
         </div>
 
@@ -156,7 +157,7 @@
         <div class="section-project-card">
             <img src="image/project3.png" alt="Project 3">
             <h3>Project Title 3</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>A full-stack project demonstrating seamless integration between frontend design and backend logic.</p>
             <div class="btn">review project</div>
         </div>
 
@@ -164,7 +165,7 @@
         <div class="section-project-card">
             <img src="image/project4.png" alt="Project 4">
             <h3>Project Title 4</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>A creative concept built to highlight user-centered design, interactive components, and consistent branding.</p>
             <div class="btn">review project</div>
          </div>
 
@@ -172,7 +173,7 @@
         <div class="section-project-card">
             <img src="image/project5.png" alt="Project 5">
             <h3>Project Title 5</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>A dynamic website prototype featuring efficient workflows, smart structure, and optimized performance.</p>
             <div class="btn">review project</div>
         </div>
 
@@ -180,7 +181,7 @@
         <div class="section-project-card">
             <img src="image/project6.png" alt="Project 6">
             <h3>Project Title 6</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>A multi-page project designed to display layout flexibility, maintainable code, and smooth user interactions.</p>
             <div class="btn">review project</div>
         </div>
     </div>
